--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,58 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-footer {
-  text-align: center;
-  padding-top: 25px;
-  opacity: 0.6;
+.app-container {
+  width: 600px;
+  margin: 40px auto;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  background-color: white;
 }
+
+.search-city-form {
+  text-align: center;
+  max-width: 0.8;
+  padding-bottom: 30px;
+}
+
+.search-city-form-input {
+  background-color: #f6f5fa;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  width: 80%;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.search-city-form-button {
+  background-color: #885df1;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  margin-left: 4px;
+}
+main {
+  padding: 0 10px;
+}
+
+.current-weather-container {
+  border-style: solid none;
+  border-width: 1px;
+  border-color: #f6f5fa;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+.current-weather-container strong {
+  color: #f65282;
+}
+
 h1 {
   font-size: 38px;
   line-height: 48px;
@@ -20,56 +67,23 @@ p {
   color: rgba(39, 33, 66, 0.4);
   font-weight: 500;
 }
-.app-container {
-  width: 600px;
-  margin: 40px auto;
-  padding: 30px;
-  border-radius: 12px;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-  background-color: white;
-}
-.search-city-form {
-  text-align: center;
-  max-width: 0.8;
-  padding-bottom: 30px;
-}
-.search-city-form-input {
-  background-color: #f6f5fa;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  width: 80%;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-}
-.search-city-form-button {
-  background-color: #885df1;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-}
-.current-weather-container {
-  border-style: solid none;
-  border-width: 1px;
-  border-color: #f6f5fa;
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 0;
-}
-.current-weather-container strong {
-  color: #f65282;
-}
+
 .current-temperature-container {
   display: flex;
   justify-content: space-between;
 }
+
 .current-temperature {
   font-size: 90px;
 }
+
 .current-temperature-unit {
   font-size: 30px;
   margin-top: 12px;
+}
+
+footer {
+  text-align: center;
+  padding-top: 25px;
+  opacity: 0.6;
 }
