added css to icon

--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,10 @@ p {
   justify-content: space-between;
 }
 
+.current-temperature-icon {
+  font-size: 75px;
+}
+
 .current-temperature {
   font-size: 90px;
 }
